# noro-old

./: .gitignore  .gitmodules  CMakeLists.txt  PLANS.md  README.md  Unnamed  cool.txt  line length limit  log.txt  lol.txt  nerd.txt  noro  noro_0.1.0_source.buildinfo
.github/: config.env
.github/scripts/: ppa.sh
.github/workflows/: cmake.yml  ppa.yml
debian/: changelog  control  copyright  debhelper-build-stamp  noro.install
doc/: colours.md  config.md  keys.md  themes.md
runtime/: settings.ini
runtime/themes/: dark.ini  dark16.ini  gruvy.ini  mono.ini  noro.ini
scripts/: createdeb.sh
src/: _components.hh  alert.cc  alert.hh  app.cc  app.hh  colourpairs.hh  config.hh  constants.hh  dotproperties.hh  editor.cc  editor.hh  fs.cc  fs.hh  inputEvents.cc  inputEvents.hh  inputWindow.cc  inputWindow.hh  iohandle.cc  iohandle.hh  main.cc  pointer.cc  pointer.hh  render.cc  render.hh  structures.hh  terminal.cc  terminal.hh  textbox.cc  textbox.hh  textboxEvents.cc  textboxEvents.hh  themes.cc  themes.hh  util.cc  util.hh
